@@ -10,12 +10,8 @@
   <parent>
     <groupId>org.ldaptive</groupId>
     <artifactId>ldaptive-parent</artifactId>
-    <version>1.2.5-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
-
-  <properties>
-    <ldapTestProvider>org.ldaptive.provider.jndi.JndiProvider</ldapTestProvider>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -31,11 +27,6 @@
     <dependency>
       <groupId>org.ldaptive</groupId>
       <artifactId>ldaptive-beans</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -83,6 +74,19 @@
       <artifactId>spring-expression</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- JMeter Load Testing Dependencies -->
+    <dependency>
+      <groupId>org.apache.jmeter</groupId>
+      <artifactId>ApacheJMeter_java</artifactId>
+      <version>5.1.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>rhino</groupId>
+      <artifactId>js</artifactId>
+       <version>1.7R2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -93,7 +97,6 @@
         <includes>
           <include>**/*.config</include>
           <include>**/*.ldif</include>
-          <include>**/*.dsmlv1</include>
           <include>**/*.xml</include>
           <include>**/*.properties</include>
           <include>**/*.credential</include>
@@ -153,6 +156,24 @@
         <artifactId>maven-resources-plugin</artifactId>
         <executions>
           <execution>
+            <id>copy-integration-jar-to-jmeter-ext</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/jmeter/lib/ext</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${project.build.directory}</directory>
+                  <includes>
+                    <include>${project.artifactId}-${project.version}-tests.jar</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+          <execution>
             <id>copy-testng</id>
             <phase>validate</phase>
             <goals>
@@ -174,7 +195,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Dorg.ldaptive.provider=${ldapTestProvider} -Xms1g -Xmx2g</argLine>
+          <argLine>-Xms1g -Xmx2g -Dio.netty.leakDetectionLevel=advanced</argLine>
           <suiteXmlFiles>
             <suiteXmlFile>${project.build.directory}/test-classes/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
@@ -229,6 +250,57 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>com.lazerycode.jmeter</groupId>
+        <artifactId>jmeter-maven-plugin</artifactId>
+        <version>2.9.0</version>
+        <executions>
+          <!-- Run JMeter tests -->
+          <execution>
+            <id>jmeter-tests</id>
+            <goals>
+              <goal>jmeter</goal>
+            </goals>
+          </execution>
+          <!-- Fail build on errors in test -->
+          <execution>
+            <id>jmeter-check-results</id>
+            <goals>
+              <goal>results</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <errorRateThresholdInPercent>1</errorRateThresholdInPercent>
+          <generateReports>true</generateReports>
+          <propertiesReportGenerator>
+            <jmeter.reportgenerator.overall_granularity>1000</jmeter.reportgenerator.overall_granularity>
+          </propertiesReportGenerator>
+          <propertiesJMeter>
+            <jmeter.save.saveservice.thread_counts>true</jmeter.save.saveservice.thread_counts>
+            <jmeter.reportgenerator.apdex_satisfied_threshold>100</jmeter.reportgenerator.apdex_satisfied_threshold>
+            <jmeter.reportgenerator.apdex_tolerated_threshold>200</jmeter.reportgenerator.apdex_tolerated_threshold>
+          </propertiesJMeter>
+          <propertiesUser>
+            <ldapUrl>ldap://ldap-test</ldapUrl>
+            <numSearchSingleUsers>20</numSearchSingleUsers>
+            <numSearchPooledUsers>20</numSearchPooledUsers>
+            <numSearchDefaultUsers>20</numSearchDefaultUsers>
+            <numAuthDefaultUsers>20</numAuthDefaultUsers>
+            <userRampUp>2</userRampUp>
+            <runDuration>5</runDuration>
+            <autoReconnect>false</autoReconnect>
+            <minPoolSize>10</minPoolSize>
+            <maxPoolSize>10</maxPoolSize>
+          </propertiesUser>
+          <jmeterExtensions>
+            <artifact>org.ldaptive:ldaptive:${project.version}</artifact>
+            <artifact>kg.apc:jmeter-plugins-graphs-vs:2.0</artifact>
+            <artifact>kg.apc:jmeter-plugins-graphs-composite:2.0</artifact>
+            <artifact>org.springframework:spring-core:jar:5.1.9.RELEASE</artifact>
+          </jmeterExtensions>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -236,9 +308,13 @@
           <debug>true</debug>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
-          <source>1.8</source>
-          <target>1.8</target>
+          <compilerArgs>
+            <arg>-Xlint:unchecked</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <source>11</source>
+          <target>11</target>
         </configuration>
         <executions>
           <execution>
@@ -258,58 +334,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>apache</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-apache</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.apache.ApacheLdapProvider</ldapTestProvider>
-      </properties>
-    </profile>
-    <profile>
-      <id>jldap</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-jldap</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.jldap.JLdapProvider</ldapTestProvider>
-      </properties>
-    </profile>
-    <profile>
-      <id>opendj</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-opendj</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.opendj.OpenDJProvider</ldapTestProvider>
-      </properties>
-    </profile>
-    <profile>
-      <id>unboundid</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-unboundid</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.unboundid.UnboundIDProvider</ldapTestProvider>
-      </properties>
-    </profile>
-  </profiles>
 </project>
