@@ -6,7 +6,7 @@
   <groupId>org.ldaptive</groupId>
   <artifactId>ldaptive-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.2.5-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>LDAPTIVE PARENT</name>
   <description>Java LDAP API</description>
   <url>http://www.ldaptive.org</url>
@@ -61,18 +61,18 @@
   </developers>
 
   <prerequisites>
-    <maven>3.0.5</maven>
+    <maven>3.6.0</maven>
   </prerequisites>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <checkstyle.dir>src/main/checkstyle</checkstyle.dir>
-    <org.slf4j.version>1.7.25</org.slf4j.version>
-    <org.springframework.version>4.3.21.RELEASE</org.springframework.version>
-    <commons-cli.version>1.4</commons-cli.version>
-    <japicmp.enabled>true</japicmp.enabled>
-    <japicmp.oldVersion>1.2.0</japicmp.oldVersion>
+    <org.slf4j.version>1.7.28</org.slf4j.version>
+    <io.netty.version>4.1.42.Final</io.netty.version>
+    <org.springframework.version>5.2.1.RELEASE</org.springframework.version>
+    <japicmp.enabled>false</japicmp.enabled>
+    <japicmp.oldVersion>2.0.0</japicmp.oldVersion>
   </properties>
 
   <modules>
@@ -80,8 +80,6 @@
     <module>beans</module>
     <module>json</module>
     <module>templates</module>
-    <module>webapp</module>
-    <module>ldapi</module>
   </modules>
 
   <dependencyManagement>
@@ -122,43 +120,6 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-webapp</artifactId>
-        <version>${project.version}</version>
-        <type>war</type>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-apache</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-jldap</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-opendj</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-unboundid</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.ldaptive</groupId>
-        <artifactId>ldaptive-ldapi</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-cli</groupId>
-        <artifactId>commons-cli</artifactId>
-        <version>${commons-cli.version}</version>
-        <optional>true</optional>
-      </dependency>
-      <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>3.1.0</version>
@@ -173,7 +134,7 @@
       <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcprov-jdk15on</artifactId>
-        <version>1.60</version>
+        <version>1.64</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -187,26 +148,6 @@
         <artifactId>velocity</artifactId>
         <version>1.7</version>
         <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.directory.api</groupId>
-        <artifactId>api-all</artifactId>
-        <version>1.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>com.novell.ldap</groupId>
-        <artifactId>jldap</artifactId>
-        <version>2009-10-07</version>
-      </dependency>
-      <dependency>
-        <groupId>org.forgerock.opendj</groupId>
-        <artifactId>opendj-ldap-sdk</artifactId>
-        <version>2.6.11</version>
-      </dependency>
-      <dependency>
-        <groupId>com.unboundid</groupId>
-        <artifactId>unboundid-ldapsdk</artifactId>
-        <version>4.0.9</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -236,12 +177,12 @@
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.8.5</version>
+        <version>2.8.6</version>
       </dependency>
       <dependency>
-        <groupId>com.kohlschutter.junixsocket</groupId>
-        <artifactId>junixsocket-native-common</artifactId>
-        <version>2.0.4</version>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>${io.netty.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -257,22 +198,17 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>3.0.0-M1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>3.0.0-M1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>3.8.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -292,24 +228,24 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.8.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.1.0</version>
           <dependencies>
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>8.16</version>
+              <version>8.26</version>
             </dependency>
           </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.0</version>
+          <version>3.0.0-M3</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -324,32 +260,32 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.0.1</version>
+          <version>3.1.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>3.0.1</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.1</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>4.1.0</version>
+          <version>4.2.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.1.1</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
           <groupId>com.github.siom79.japicmp</groupId>
           <artifactId>japicmp-maven-plugin</artifactId>
-          <version>0.13.0</version>
+          <version>0.14.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -368,9 +304,13 @@
           <debug>true</debug>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
-          <source>1.8</source>
-          <target>1.8</target>
+          <compilerArgs>
+            <arg>-Xlint:unchecked</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
       <plugin>
@@ -400,7 +340,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
           <links>
-            <link>http://download.oracle.com/javase/8/docs/api</link>
+            <link>https://docs.oracle.com/en/java/javase/11/docs/api</link>
             <link>http://www.slf4j.org/apidocs/</link>
           </links>
           <quiet>true</quiet>
@@ -410,13 +350,6 @@
           <doctitle>Ldaptive ${project.version} API</doctitle>
           <windowtitle>Ldaptive ${project.version} API</windowtitle>
           <bottom><![CDATA[<i>Copyright &#169; 2003-2019 Virginia Tech. All Rights Reserved.</i>]]></bottom>
-          <additionalDependencies>
-            <additionalDependency>
-              <groupId>commons-cli</groupId>
-              <artifactId>commons-cli</artifactId>
-              <version>${commons-cli.version}</version>
-            </additionalDependency>
-          </additionalDependencies>
         </configuration>
         <executions>
           <execution>
@@ -535,40 +468,6 @@
     </plugins>
   </build>
   <profiles>
-    <profile>
-      <id>apache</id>
-      <modules>
-        <module>apache-provider</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>jldap</id>
-      <modules>
-        <module>jldap-provider</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>opendj</id>
-      <modules>
-        <module>opendj-provider</module>
-      </modules>
-      <repositories>
-        <repository>
-          <id>vt-middleware</id>
-          <name>VT Middleware GitHub Repository</name>
-          <url>https://raw.github.com/vt-middleware/maven-repo/master</url>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-        </repository>
-      </repositories>
-    </profile>
-    <profile>
-      <id>unboundid</id>
-      <modules>
-        <module>unboundid-provider</module>
-      </modules>
-    </profile>
     <profile>
       <id>integration</id>
       <modules>
